--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files":[
+            "app/Helpers/function.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
